# hadron

./: .Rbuildignore  .clang-format  .gitignore  .travis.yml  .travis_install_texlive.R  CONTRIBUTING.md  DESCRIPTION  NAMESPACE  NEWS.md  README  README.md  Weighted_Model.nb  check  cleanup  configure  configure.ac  document  install  matrixfit.R  new_matrixfit.Rmd  setup-devel  test  test_bootstrap_nlsfit.Rmd  test_readbinarysamples.Rmd  verify-exports
R/: 3pt.R  CExp.R  ChiSqr.R  LuescherMethod.R  LuescherZeta.R  OSChiPTFit.R  RcppExports.R  UWerr.R  a0.R  alpha_s.R  ana.R  analyseOS.R  analysis_gradient_flow.R  analysis_online.R  analysis_tmlqcd_gradient_flow.R  avercycle.R  b1.R  block.R  boot_ts_array.R  bootstrap.nlsfit.R  bootstrapnumber.R  cA2.09.48_3pi_I3_0_A1u_1_pc.R  cdh.R  cf.R  cfunction.R  chiralfit.R  chiralfit2.R  cmfit.R  computeDisc.R  computeacf.R  computefps.R  correlatedRNG.R  cosh_nlsfit.R  cvc_readutils.R  cyprus_readutils.R  deriv_utils.R  effectivemass.R  fit.R  fit.plateau2cf.R  fitmass.R  (+67 more)
data/: cA2.09.48_3pi_I3_0_A1u_1_pc.RData  correlatormatrix.RData  datalist  loopdata.RData  loopdata.Rdata  make_ref_gf_scales.R  plaq.sample.RData  pscor.sample.RData  ref_gf_scales.RData  sample_raw_gradflow.RData  samplecf.RData  samplerw.RData  samplerw_inverse.RData
exec/: 3pt.R  analyse.eta_OS.4x4.R  analyse.eta_ss.R  analyse.nd-kaon.4x4.R  analyse.nd-kaon.8x8.R  analyse.pion.2x2.R  analyse.pion0.2x2.R  analyse_pipi.R  eta_extrapolate.R  feta.R  hdf5-example.R  online_measurements_analysis_driver_template.R  online_measurements_status_template.Rmd  pdfcat  putonlinetogether.sh  puttogether.sh  puttogether_reverse.sh
hooks/: pre-commit
inst/: new_matrixfit.Rmd  weighted_model.Rmd
man/: CExp.Rd  LuescherZeta.Rd  NParticleModel.Rd  Phi4Model.Rd  SingleConstantModel.Rd  add.cf.Rd  add.raw_cf.Rd  addConfIndex2cf.Rd  addStat.cf.Rd  addStat.raw_cf.Rd  addStat.rw.Rd  alpha_s.Rd  analysis_gradient_flow.Rd  analysis_online.Rd  avercycle.Rd  averx.Rd  avg.cbt.cf.Rd  avg.ls.cf.Rd  b1.Rd  block.raw_cf.Rd  boot_ts_array.Rd  bootstrap.analysis.Rd  bootstrap.cf.Rd  bootstrap.effectivemass.Rd  bootstrap.gevp.Rd  bootstrap.hankel.Rd  bootstrap.meanerror.Rd  bootstrap.nlsfit.Rd  bootstrap_rw.cf.Rd  c.cf.Rd  c.raw_cf.Rd  cdh.Rd  cdhnew.Rd  cf.Rd  cf_boot.Rd  cf_jackknife.Rd  cf_key_meson_2pt.Rd  cf_key_meson_3pt.Rd  cf_key_meson_3pt_local.Rd  cf_meta.Rd  (+211 more)
notes/: Matrixfit_Performance.Rmd  gevp_review.md
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  alpha_s.c  alpha_s.h  cdh.c  cdh.h  chisqrbody.c  firstPart.c  gen_points_array.c  gsl_fit.c  gsl_multimin.c  gsl_smearedfit.c  inteSubFunc.c  inv_cosh.c  luscherZeta.c  luscherZeta.h  read_nissa_correlation.cpp  read_nissa_textcf_kernel.cpp  secondPart.c  spheHarmYlm.c  sumit.c  thirdPart.c  tmcdh.c  zetaFunc.h  zeta_function_R_interface.c
tests/: new_matrixfit_all_points.Rmd  single_constant_model.Rmd  testthat.R
vignettes/: gevp.Rmd  (+12 more)
(+98 files in other folders)
